@@ -1,6 +1,8 @@
-* Fri Jun 01 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.1.4-0
+* Mon Jun 04 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.2.0-0
 - Update 'simp' audit profile settings for DISA STIG.
   - Expanded the list of successful syscall operations audited.
+  - Added an option to monitor selinux commands, (i.e., chcon,
+    semanage, setfiles, setsebool)
 
 * Mon Mar 26 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.1.3-0
 - Work around RPM upgrade issue with nodeset link in compliance
